--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,13 @@
 cmake_minimum_required(VERSION 3.21)
 
-include(cmake/Version.cmake)
-
 project(learn-cpp
-  VERSION ${VERSION_SHORT}
+  VERSION "1.0.0"
   DESCRIPTION "My personal C++ learning project"
   HOMEPAGE_URL "https://naurislinde.dev"
   LANGUAGES CXX C)
 
 include(cmake/Options.cmake)
 include(cmake/CompilationFlags.cmake)
-include(cmake/SystemLink.cmake)
-
-include(cmake/Dependencies.cmake)
-setup_dependencies()
 
 add_library(project_warnings INTERFACE)
 add_library(project_options INTERFACE)
@@ -28,15 +22,6 @@ enable_sanitizers(project_options
         ${ENABLE_SANITIZER_UNDEFINED}
         ${ENABLE_SANITIZER_THREAD}
         ${ENABLE_SANITIZER_MEMORY})
-
-if(ENABLE_PCH)
-  target_precompile_headers(
-    project_options
-    INTERFACE
-    <vector>
-    <string>
-    <utility>)
-endif()
 
 if(ENABLE_CACHE)
   include(cmake/Cache.cmake)
@@ -56,28 +41,10 @@ if(ENABLE_INCLUDE_WHAT_YOU_USE)
 enable_include_what_you_use()
 endif()
 
-if(ENABLE_COVERAGE)
-  include(cmake/CodeCoverage.cmake)
-  enable_coverage(project_options)
-endif()
-
 target_compile_features(project_options INTERFACE cxx_std_${CMAKE_CXX_STANDARD})
 
 add_subdirectory(src)
 
-include(cmake/CPack.cmake)
-
-if(COMPILE_TESTS)
-  enable_testing()
-  add_subdirectory(tests)
-endif()
-
-if (ENABLE_DOCS)
-  include(cmake/Doxygen.cmake)
-  enable_doxygen("")
-endif()
-
-message(STATUS "Version: ${PROJECT_VERSION}")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "Release cxx: ${CMAKE_CXX_FLAGS_RELEASE}")
 message(STATUS "Debug cxx: ${CMAKE_CXX_FLAGS_DEBUG}")
