--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -48,6 +48,9 @@
         },
         "ghcr.io/devcontainers/features/git-lfs:1": {
             "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts",
         }
     }
 }
