--- a/src/patterns/creational/singleton/CMakeLists.txt
+++ b/src/patterns/creational/singleton/CMakeLists.txt
@@ -1,10 +1,13 @@
 set(SOURCE_FILES
   main.cpp)
 
+find_package(Threads REQUIRED)
+
 add_executable(singleton
   ${SOURCE_FILES})
 
 target_link_libraries(singleton PRIVATE
   project_options
   project_warnings
+  Threads::Threads
 )
