--- a/src/data-structures/CMakeLists.txt
+++ b/src/data-structures/CMakeLists.txt
@@ -2,3 +2,5 @@ add_subdirectory(array)
 add_subdirectory(vector)
 add_subdirectory(stack)
 add_subdirectory(queue)
+add_subdirectory(linked-list)
+add_subdirectory(hash-map)
