Binary tree data structure

--- a/src/data-structures/CMakeLists.txt
+++ b/src/data-structures/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(stack)
 add_subdirectory(queue)
 add_subdirectory(linked-list)
 add_subdirectory(hash-map)
+add_subdirectory(binary-tree)
