--- a/src/data-structures/CMakeLists.txt
+++ b/src/data-structures/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(queue)
 add_subdirectory(linked-list)
 add_subdirectory(hash-map)
 add_subdirectory(binary-tree)
+add_subdirectory(heap)
