--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(patterns)
 add_subdirectory(data-structures)
 add_subdirectory(sorting)
 add_subdirectory(modules)
+add_subdirectory(concurrency)
