--- a/src/concurrency/parallel/CMakeLists.txt
+++ b/src/concurrency/parallel/CMakeLists.txt
@@ -4,7 +4,9 @@ set(SOURCE_FILES
 add_executable(parallel
   ${SOURCE_FILES})
 
+find_package(TBB REQUIRED COMPONENTS tbb)
 target_link_libraries(parallel PRIVATE
   project_options
   project_warnings
+  tbb
 )
