--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(data-structures)
 add_subdirectory(sorting)
 add_subdirectory(modules)
 add_subdirectory(concurrency)
+add_subdirectory(templates)
