--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(sorting)
 add_subdirectory(modules)
 add_subdirectory(concurrency)
 add_subdirectory(templates)
+add_subdirectory(memory)
