--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(modules)
 add_subdirectory(concurrency)
 add_subdirectory(templates)
 add_subdirectory(memory)
+add_subdirectory(search)
