--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,10 @@
 add_subdirectory(patterns)
 add_subdirectory(data-structures)
 add_subdirectory(sorting)
-add_subdirectory(modules)
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  add_subdirectory(modules)
+endif()
 add_subdirectory(concurrency)
 add_subdirectory(templates)
 add_subdirectory(memory)
+
