--- a/src/concurrency/parallel/CMakeLists.txt
+++ b/src/concurrency/parallel/CMakeLists.txt
@@ -1,12 +1,6 @@
-set(SOURCE_FILES
-  main.cpp)
+set(SOURCE_FILES main.cpp)
 
-add_executable(parallel
-  ${SOURCE_FILES})
+add_executable(parallel ${SOURCE_FILES})
 
 find_package(TBB REQUIRED COMPONENTS tbb)
-target_link_libraries(parallel PRIVATE
-  project_options
-  project_warnings
-  tbb
-)
+target_link_libraries(parallel PRIVATE project_options project_warnings TBB::tbb)
