--- a/src/modules/math/CMakeLists.txt
+++ b/src/modules/math/CMakeLists.txt
@@ -11,3 +11,8 @@ target_sources(math
 
 add_executable(math_module main.cpp)
 target_link_libraries(math_module math)
+
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(math_module PRIVATE -stdlib=libc++)
+    target_link_options(math_module PRIVATE -stdlib=libc++)
+endif()
