--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
           - windows-2022
           - ubuntu-24.04
         compiler:
-          - llvm-18.1.8
-          - gcc-14.2.0
+          - llvm
+          - gcc
         generator:
           - "Ninja"
         build_type:
@@ -36,9 +36,9 @@ jobs:
           - Debug
         exclude:
           - os: windows-2022
-            compiler: gcc-14
+            compiler: gcc
           - os: windows-2022
-            compiler: llvm-18
+            compiler: llvm
         include:
           - os: windows-2022
             compiler: msvc
