--- a/src/concurrency/CMakeLists.txt
+++ b/src/concurrency/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(threads)
-add_subdirectory(parallel)
+add_subdirectory(intel-tbb)
 add_subdirectory(omp)
 add_subdirectory(mutex)
 add_subdirectory(atomic)
+add_subdirectory(parallel)
