--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,6 +25,7 @@
                 "ms-vscode.cmake-tools",
                 "twxs.cmake",
                 "cheshirekow.cmake-format",
+                "xaver.clang-format",
                 "cschlosser.doxdocgen",
                 "streetsidesoftware.code-spell-checker",
                 "editorconfig.editorconfig",
