Added example of CircularBuffer

--- a/src/data-structures/CMakeLists.txt
+++ b/src/data-structures/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(linked-list)
 add_subdirectory(hash-map)
 add_subdirectory(binary-tree)
 add_subdirectory(heap)
+add_subdirectory(circular-buffer)
