Added LRU Cache example

--- a/src/data-structures/CMakeLists.txt
+++ b/src/data-structures/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(hash-map)
 add_subdirectory(binary-tree)
 add_subdirectory(heap)
 add_subdirectory(circular-buffer)
+add_subdirectory(lru-cache)
