--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(concurrency)
 add_subdirectory(templates)
 add_subdirectory(memory)
 add_subdirectory(search)
+add_subdirectory(filesystem)
