Added reference counting example

--- a/src/memory/CMakeLists.txt
+++ b/src/memory/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(pools)
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT ENABLE_CLANG_TIDY))
   add_subdirectory(raii)
 endif()
+add_subdirectory(reference-counting)
