Added SIMD example

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(templates)
 add_subdirectory(memory)
 add_subdirectory(search)
 add_subdirectory(filesystem)
+add_subdirectory(simd)
