Added move semantics example

--- a/src/memory/CMakeLists.txt
+++ b/src/memory/CMakeLists.txt
@@ -4,3 +4,4 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND NOT ENABLE_CLANG_TIDY)
   add_subdirectory(raii)
 endif()
 add_subdirectory(reference-counting)
+add_subdirectory(move-semantics)
