--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(memory)
 add_subdirectory(search)
 add_subdirectory(filesystem)
 add_subdirectory(simd)
+add_subdirectory(undo-framework)
