File manager example

--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -5,3 +5,4 @@ if (CMAKE_SYSTEM_NAME STREQUAL "Linux")
 endif()
 add_subdirectory(command-line)
 add_subdirectory(signals)
+add_subdirectory(file-manager)
