--- a/src/concurrency/omp/CMakeLists.txt
+++ b/src/concurrency/omp/CMakeLists.txt
@@ -1,16 +1,11 @@
-set(SOURCE_FILES
-    main.cpp)
+set(SOURCE_FILES main.cpp)
 
-add_executable(omp
-    ${SOURCE_FILES})
+add_executable(omp ${SOURCE_FILES})
 
-target_link_libraries(omp PRIVATE
-    project_options
-    project_warnings
-)
+target_link_libraries(omp PRIVATE project_options project_warnings)
 
 find_package(OpenMP)
 
 if(OpenMP_CXX_FOUND)
-    target_link_libraries(omp PUBLIC OpenMP::OpenMP_CXX)
+  target_link_libraries(omp PUBLIC OpenMP::OpenMP_CXX)
 endif()
