--- a/src/concurrency/threads/CMakeLists.txt
+++ b/src/concurrency/threads/CMakeLists.txt
@@ -1,10 +1,5 @@
-set(SOURCE_FILES
-  main.cpp)
+set(SOURCE_FILES main.cpp)
 
-add_executable(threads
-  ${SOURCE_FILES})
+add_executable(threads ${SOURCE_FILES})
 
-target_link_libraries(threads PRIVATE
-  project_options
-  project_warnings
-)
+target_link_libraries(threads PRIVATE project_options project_warnings)
