--- a/src/data-structures/array/CMakeLists.txt
+++ b/src/data-structures/array/CMakeLists.txt
@@ -1,10 +1,5 @@
-set(SOURCE_FILES
-  main.cpp)
+set(SOURCE_FILES main.cpp)
 
-add_executable(array
-  ${SOURCE_FILES})
+add_executable(array ${SOURCE_FILES})
 
-target_link_libraries(array PRIVATE
-  project_options
-  project_warnings
-)
+target_link_libraries(array PRIVATE project_options project_warnings)
