Added installation of libx11-dev dependency for Ubuntu in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,10 @@ jobs:
             build_type: Debug
 
     steps:
+      - name: Install dependencies
+        if: ${{ contains(matrix.os, 'ubuntu') }}
+        run: sudo apt-get install -y libx11-dev
+
       - uses: actions/checkout@v4
 
       - name: Setup Cache
