Added resource manager example

--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(command-line)
 add_subdirectory(signals)
 add_subdirectory(file-manager)
 add_subdirectory(event-bus)
+add_subdirectory(resource-manager)
