Added example of configuration manager

--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(signals)
 add_subdirectory(file-manager)
 add_subdirectory(event-bus)
 add_subdirectory(resource-manager)
+add_subdirectory(configuration-manager)
