Added job-queue example

--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(file-manager)
 add_subdirectory(event-bus)
 add_subdirectory(resource-manager)
 add_subdirectory(configuration-manager)
+add_subdirectory(job-queue)
