--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(event-bus)
 add_subdirectory(resource-manager)
 add_subdirectory(configuration-manager)
 add_subdirectory(job-queue)
+add_subdirectory(http-client)
