Added plugin system example

--- a/src/real-world/CMakeLists.txt
+++ b/src/real-world/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(resource-manager)
 add_subdirectory(configuration-manager)
 add_subdirectory(job-queue)
 add_subdirectory(http-client)
+add_subdirectory(plugin-system)
